# Axis_AMM

./: .gitignore  BUILD_VALIDATION_LOG.md  DEVNET_TESTING.md  README.md  TEST_LOG.md  eslint.config.mjs  jest.config.cjs  package.json
.github/workflows/: ci.yml  e2e-devnet.yml  litesvm-jupiter-cpi.yml  main-report.yml  reusable-e2e-local.yml  reusable-rust.yml  reusable-typescript.yml
axis-g3m/: Cargo.toml
axis-g3m/client/: e2e-devnet.ts  e2e.ts  package-lock.json  package.json
axis-g3m/programs/axis-g3m/: Cargo.toml
axis-vault/client/: e2e.ts  package-lock.json  package.json
benchmark/: bench.ts  package.json
ci/: _common.sh  e2e-local-cleanup.sh  e2e-local-prepare.sh  ensure-devnet-wallet-funded.sh  install-solana.sh  jest.sh  job-devnet-e2e.sh  job-local-benchmark.sh  job-local-e2e.sh  job-rust-and-typescript.sh  job-rust.sh  job-typescript.sh  lint-all.sh  rust-build-sbf.sh  rust-lint.sh  rust-tests.sh  setup-rust.sh  ts-lint.sh  ts-typecheck.sh  update-ab-report.sh
contracts/ab-integration-tests/tests/: ab_comparison.rs
contracts/axis-g3m/: Cargo.toml
contracts/axis-g3m/src/: error.rs  jupiter.rs  lib.rs  security.rs
contracts/axis-g3m/src/instructions/: check_drift.rs  initialize_pool.rs  rebalance.rs  swap.rs
contracts/axis-g3m/src/math/: mod.rs
contracts/axis-g3m/src/state/: pool_state.rs
contracts/axis-g3m/tests/: jupiter_cpi.rs
contracts/axis-vault/: Cargo.toml
contracts/axis-vault/src/: constants.rs  error.rs  lib.rs
contracts/pfda-amm-3/src/: error.rs  jito.rs  lib.rs  oracle.rs  security.rs
contracts/pfda-amm/src/: error.rs  lib.rs  oracle.rs
pfda-amm/: Cargo.toml
pfda-amm/client/: package-lock.json  test-oracle.ts
pfda-amm/programs/pfda-amm-3/: Cargo.toml
reports/ab/: latest.json  latest.md
reports/ab/pr-validation/: latest.json  latest.md
scripts/: ab-metrics-config.json  package-lock.json  package.json  run-ab-rehearsal.ts  setup-switchboard-feeds.ts
solana-tfmm-rs/: .env.example  .gitignore  Cargo.toml  README.md
solana-tfmm-rs/crates/cli/: Cargo.toml
solana-tfmm-rs/crates/cli/src/: commands.rs  main.rs  setup.rs
solana-tfmm-rs/crates/core/: Cargo.toml
solana-tfmm-rs/crates/core/src/: arb.rs  g3m.rs  lib.rs  lvr.rs  types.rs
solana-tfmm-rs/crates/ingest/: Cargo.toml
solana-tfmm-rs/crates/ingest/src/: binance.rs  coinbase.rs  helius.rs  lib.rs
solana-tfmm-rs/crates/sim/: Cargo.toml
solana-tfmm-rs/crates/sim/src/: lib.rs
solana-tfmm-rs/scripts/: plot_paper_full_set.py
test/ab/: ab-rehearsal.ts  collect-ab-metrics.ts  devnet-wallet.ts  package.json
test/benchmark/: ab-cu-benchmark.ts  package.json
test/jest/: ci-structure.test.cjs
(+78 files in other folders)
