[workspace]
members = [
  "crates/core",
  "crates/ingest",
  "crates/sim",
  "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yusuke Kikuta"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ndarray = "0.15"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
solana-client = "1.18"
solana-sdk = "1.18"
