[package]
name = "axis-g3m"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9"
pinocchio-system = "0.4"
pinocchio-token = "0.4"

[features]
no-entrypoint = []

[dev-dependencies]
litesvm = "0.11"
solana-keypair = "3"
solana-signer = "3"
solana-instruction = "3"
solana-transaction = "3"
solana-message = "3"
solana-hash = "3"
solana-address = "2"
solana-account = "3"
solana-native-token = "3"
solana-rpc-client = "3"
